# TesutoHime

./: .gitignore  Dockerfile.judger  Dockerfile.sched  Dockerfile.web  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  install.sh  install_judger.sh  mypy-check  nginx-oj.conf  nsjail  requirements.mypy.txt  runner.sample.yml  scheduler.sample.yml
DataService/: upload.php  upload_template.php
Deploy/: cdn.7z  judger.service  judger2.service  oj_wsgi.conf  ojweb.service  ojweb_uwsgi.service  scheduler2.service
Documents/: 1. Web服务器部署方法.md  100. 管理界面使用指南.md  2. 评测机部署方法.md  200. 题面格式规范.md  3. 数据服务部署方法(nginx+php).md  300. 数据格式规范.md  4. 图床服务部署方法(nginx+php).md  5. Web与Frontend接口说明.md  Database_Structure(outdated).md  Database_Structure.md  Judge_Server_Scheduler_Interface.md  ProblemData_Format.md  Web服务器部署方法.md  database.md  scripts.md  数据zip格式规范.md  评测机部署方法.md
Judger/: JudgerResult.py  api.py  classic_interaction.py  config-sample.py  config.py  data-test.py  heartBeat.py  interactive.py  isBusy_api.py  jsonCheck.py  judgeManager.py  judge_api.py  log_test.py  makejson.py  requirements.txt  run.py  util.py
PicService/: upload_template.php
Web/: admin.py  api.py  config.py  config_template.py  const.py  contestCache.py  contestManager.py  debug.py  discussManager.py  judgeManager.py  judgeServerManager.py  judgeServerScheduler.py  oj.wsgi  oldJudgeManager.py  problemManager.py  (+13 more)
judger2/checker/: .gitignore  CMakeLists.txt  Makefile  arguments.cpp  arguments.h  check.cpp  check.h  checker.cpp  main.cpp
judger2/checker/scripts/: build  clean
(+623 files in other folders)
